<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.bfh.univote.registration.RegistrationCompleteActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registration_complete_title"
            android:id="@+id/textView24"
            android:textStyle="bold" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20px" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20px" />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/check_big" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20px" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="15dp"
            android:text="@string/registration_complete"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20px" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_home"
            android:id="@+id/button_home"
            android:textAllCaps="false"
            android:onClick="onClick"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape" />


    </LinearLayout>

</RelativeLayout>
