<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".WelcomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1">

                <ImageView
                    android:layout_width="154dp"
                    android:layout_height="52dp"
                    android:scaleType="fitXY"
                    android:contentDescription=""
                    android:src="@drawable/univotelogov2" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/welcome_to_univote"
                    android:id="@+id/textView2"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idea_content"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"></LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/current_elections"
                    android:id="@+id/textView4"
                    android:textColor="@android:color/black" />

                <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/currentElections"></ListView>
                
                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
