<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.bfh.univote.election.activities.PasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password_input_required"
            android:id="@+id/textView10"
            android:textStyle="bold" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="User: "
                android:id="@+id/textView25"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="[userEmail]"
                android:id="@+id/textViewPasswordActivityUser"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="IDP: "
                android:id="@+id/textView27"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="[idp]"
                android:id="@+id/textViewPasswordActivityIDP"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/personal_voting_key_imported_enter_password"
            android:id="@+id/textView8"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_text_password"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:textAllCaps="false"
            android:id="@+id/button_password_forgotten" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"
            android:id="@+id/passwordContinueButton" />
    </LinearLayout>

</RelativeLayout>
