<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartRegistrationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1">

                <ImageView
                    android:layout_width="154dp"
                    android:layout_height="52dp"
                    android:scaleType="fitXY"
                    android:contentDescription=""
                    android:src="@drawable/univotelogov2" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Willkommen bei UniVote"
                    android:id="@+id/textView"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idea_content"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"></LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/registration"
                    android:id="@+id/textView4"
                    android:textColor="@android:color/black" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_content"
                    android:id="@+id/textView23"
                    android:textColor="@android:color/black" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="10px" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:id="@+id/button_registration"
                    android:enabled="true"
                    android:clickable="true"
                    android:textAllCaps="false"
                    android:onClick="onClick"
                    android:textSize="12sp"

                    android:textColor="#FFFFFF"
                    android:background="@drawable/buttonshape"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
